[package]
name = "kvs"
version = "0.1.0"
authors = ["hindenbug"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
failure = "0.1.5"
serde = { version = "1.0.89", features = ["derive", "rc"] }
serde_json = "1.0.39"
bincode = "1.2.1"
structopt = "0.3"
log = "0.4"
env_logger = "0.7"
sled = "0.31"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
rand = "0.6.5"
criterion = "0.3.0"
crossbeam-utils = "0.6.5"
panic-control = "0.1.4"

[lib]
test = false
doctest = false

[[bin]]
name = "kvs-client"
test = false

[[bin]]
name = "kvs-server"
test = false

[[bench]]
name = "benches"
harness = false